--- a/Apple Pie/Base.lproj/Main.storyboard
+++ b/Apple Pie/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Vbo-Dy-BhY">
                                 <rect key="frame" x="0.0" y="20" width="1112" height="814"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tree 0" translatesAutoresizingMaskIntoConstraints="NO" id="fYm-fG-pPP">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tree 0" translatesAutoresizingMaskIntoConstraints="NO" id="xP1-o0-cpf">
                                         <rect key="frame" x="0.0" y="0.0" width="1112" height="490"/>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="BvV-Nw-S7s">
@@ -298,7 +298,7 @@
                     <connections>
                         <outlet property="correctWordLabel" destination="E6n-dE-6xm" id="ApW-oN-69x"/>
                         <outlet property="scoreLabel" destination="nBi-fR-4Pq" id="iIY-tI-xDN"/>
-                        <outlet property="treeImageView" destination="fYm-fG-pPP" id="GtG-MM-cE5"/>
+                        <outlet property="treeImageView" destination="xP1-o0-cpf" id="Re7-Es-Rm1"/>
                         <outletCollection property="letterButtons" destination="eaC-vY-Qbs" collectionClass="NSMutableArray" id="JTC-HU-fIR"/>
                         <outletCollection property="letterButtons" destination="R0S-F4-osx" collectionClass="NSMutableArray" id="iF1-VX-Dal"/>
                         <outletCollection property="letterButtons" destination="vK0-iQ-8km" collectionClass="NSMutableArray" id="HPg-Ma-anI"/>
